--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <script src="app.js"></script> -->
-    <script src="script1.js"></script>
+     <!-- <script src="Condition.js"></script> -->
+    <script src="Loop.js"></script>
 </head>
 <body>
     
