--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- <script src="app.js"></script> -->
-     <!-- <script src="Condition.js"></script> -->
-    <script src="Loop.js"></script>
-</head>
-<body>
-    
-</body>
+    <!-- <script src="Condition.js"></script> -->
+    <!-- <script src="Loop.js"></script> -->
+    <script src="arrays.js"></script>
+  </head>
+  <body></body>
 </html>
