--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <!-- <script src="app.js"></script> -->
     <!-- <script src="Condition.js"></script> -->
     <!-- <script src="Loop.js"></script> -->
-    <script src="arrays.js"></script>
+    <!-- <script src="arrays.js"></script> -->
+     <script src="strings.js"></script>
   </head>
   <body></body>
 </html>
