--- a/index1.html
+++ b/index1.html
@@ -6,6 +6,12 @@
     <title>Document</title>
     <script src="strings.js"></script>
 </head>
+<style>
+    h1{
+        text-decoration: underline;
+        text-decoration-thickness: 3px;
+    }
+</style>
 <body>
     <h1>Hello jii </h1>
 </body>
