Add twoSum.js implementation with test cases; refactor index.html to remove unused scripts

--- a/index.html
+++ b/index.html
@@ -1,187 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <script src="app.js"></script> -->
-    <!-- <script src="Condition.js"></script> -->
-    <!-- <script src="Loop.js"></script> -->
-    <!-- <script src="arrays.js"></script> -->
-    <!-- <script src="strings.js"></script> -->
-    <!-- <script src="practice.js"></script> -->
-    <script src="test.js"></script>
-  </head>
-  <body>
-    <!-- <h1 id="name">Hello,vivek</h1>
-    <p class="info">This is paragrapgh</p>
-
-    <h2 id="name1">Rohit</h2>
-
-    <button id="btn">Click Me</button>
-    <p id="text">Hello,vivek</p>
-
-    <h3 id="hoverme">Hover over me</h3>
-
-    <button id="addBtn">Add Paragraph</button>
-    <div id="container"></div>
-
-    <p id="remove">Click the button remove me</p>
-    <button id="removeBtn">Click Me!</button>
-
-    <button id="delayBtn">Click Me!</button>
-
-    <p id="message"></p>
-
-     -->
-
-    <h1>Counter</h1>
-    <p>You Clicked <span id="count">0</span> times</p>
-    <button id="clickbtn">ClickMe</button>
-    <button id="reset">Reset</button>
-    <button id="decrease">Decrease</button>
-
-    <p>Counter <span id="counter">0</span></p>
-    <button onclick="increment()">StartCounter</button>
-
-    <script>
-      const button = document.getElementById("clickbtn");
-      const countSpan = document.getElementById("count");
-      const decreaseButton = document.getElementById("decrease");
-      decreaseButton.addEventListener("click", function () {
-        count--;
-        countSpan.textContent = countSpan.textContent - 1;
-      });
-
-      const resetButton = document.getElementById("reset");
-      resetButton.addEventListener("click", function () {
-        countSpan.textContent = 0;
-        count = 0;
-      });
-
-      let count = 0;
-      button.addEventListener("click", function () {
-        count++;
-        countSpan.textContent = count;
-      });
-
-      let startvalue = 0;
-      function increment() {
-        startvalue++;
-        document.getElementById("counter").innerText = startvalue;
-      }
-
-      // function step1() {
-      //   return new Promise((resolve, reject) => {
-      //     setTimeout(() => {
-      //       console.log("Step 1 completed");
-      //       resolve(); // Step 1 successful
-      //     }, 1000);
-      //   });
-      // }
-
-      // // ✅ Now executing promise chaining
-      // step1()
-      //   .then(() => console.log("All steps are completed ✅"))
-      //   .catch((error) => console.log("Error:", error));
-
-      // function step1() {
-      //   return new Promise((resolve) => {
-      //     setTimeout(() => {
-      //       console.log("step 1 completed bhai");
-      //       resolve();
-      //     }, 1000);
-      //   });
-      // }
-
-      // function step2() {
-      //   return new Promise((resolve) => {
-      //     setTimeout(() => {
-      //       console.log("step 2 compeleted");
-      //       resolve();
-      //     }, 1000);
-      //   });
-      // }
-
-      // async function processSteps() {
-      //   await step1();
-      //   await step2();
-      //   console.log("All steps are completed");
-      // }
-      // processSteps();
-
-      // let counter = document.getElementById("counter");
-      // let startCounter = document.getElementById("startCounter");
-      // let count = 0;
-      // let intervalid = null;
-
-      // startCounter.addEventListener("click", function () {
-      //   if (intervalid === null) {
-      //     intervalid = setInterval(() => {
-      //       count++;
-      //       counter.innerText = count;
-      //     }, 1000);
-      //   }
-      // });
-
-      // let button1 = document.getElementById("delayBtn");
-      // let message = document.getElementById("message");
-
-      // button1.addEventListener("click", function () {
-      //   message.innerText = "wait fo 3 sec";
-
-      //   setTimeout(() => {
-      //     message.innerText = "Hello vivek jii";
-      //   }, 3000);
-      // });
-
-      // let removeButton = document.getElementById("removeBtn");
-      // let removePara = document.getElementById("remove");
-
-      // removeButton.addEventListener("click", function () {
-      //   removePara.remove();
-      // });
-
-      // let addButton = document.getElementById("addBtn");
-      // let container = document.getElementById("container");
-      // addButton.addEventListener("click", function () {
-      //   let newPara = document.createElement("p");
-      //   newPara.innerText = "this is new paragraph";
-      //   newPara.style.color = "blue";
-      //   container.appendChild(newPara);
-      // });
-      // let heading4 = document.getElementById("hoverme");
-      // heading4.addEventListener("mouseover", function () {
-      //   heading4.style.color = "red";
-      // });
-      // heading4.addEventListener("mouseout", function () {
-      //   heading4.style.color = "black";
-      // });
-
-      // let button = document.getElementById("btn");
-      // let text1 = document.getElementById("text");
-      // button.addEventListener("click", function () {
-      //   text1.innerText = "Welcome to  JavaScript";
-      // });
-
-      // let heading = document.getElementById("name");
-      // console.log(heading.innerText);
-
-      // let para = document.getElementsByClassName("info");
-      // console.log(para[0].innerText);
-
-      // let para1 = document.querySelector(".info");
-      // console.log(para1.innerText);
-
-      // let para2 = document.querySelectorAll(".info");
-      // console.log(para2[0].innerText);
-
-      // let para3 = document.getElementById("name1");
-      // para3.innerText = "vivek kumar";
-
-      // let para4 = document.getElementById("name");
-      // para4.style.color = "blue";
-      // para4.style.fontSize = "18px";
-    </script>
-  </body>
+    <!-- <script src="https://unpkg.com/@tailwindcss/browser@4"></script> -->
+     <script src="/DSA JAVASCRIPT/twoSum.js"></script>
+</head>
+<body>
+    
+    
+</body>
 </html>
