refactor: update script source in index.html and improve formatting in Question.js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <script src="https://unpkg.com/@tailwindcss/browser@4"></script> -->
-     <script src="/DSA JAVASCRIPT/twoSum.js"></script>
+     <script src="/DSA JAVASCRIPT/Question.js"></script>
+
 </head>
 <body>
     
